# rust-code_writer

./: Cargo.toml  README.md
src/: error.rs  lib.rs  writer.rs
src/language/: mod.rs  rust.rs  thrift.rs
src/model/: comments.rs  functions.rs  identity.rs  macros.rs  mod.rs  modules.rs  properties.rs  structured_types.rs  values.rs
tests/: model_api.rs  rust_basic.rs  thrift_basic.rs
tests/common/: mod.rs
